--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="/src/assets/main.css">
   </head>
   <body>
-    <div id="splash"></div>
-    <div id="app"></div>
+    <div id="loading"></div>
+    <div id="qinghe-guide"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
