--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>青何导航</title>
     <link rel="stylesheet" href="/src/assets/main.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/qweather-icons@1.3.0/font/qweather-icons.css">
+    <link rel="stylesheet" href="https://cdn.ifback.com/website/qhGuide/qweather-icons.css">
   </head>
   <body>
     <div id="loading"></div>
